# opencv_class

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cpp.hint
class1/: CMakeLists.txt  main.cpp  test.cpp
class2/: CMakeLists.txt  main.cpp
class3/: CMakeLists.txt  main.cpp
class4/: CMakeLists.txt  main.cpp
class5/: CMakeLists.txt  main.cpp
class6/: CMakeLists.txt  main.cpp
class7/: CMakeLists.txt  main.cpp  utils.cpp
class7/include/: utils.h
